@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project name="JSpace Loggers Plugin" default="" basedir=".">
+	<property name="dest.plugins.jspace" value="${dest.plugins}/jspace"/>
+	
+	<target name="update" description="">
+		<echo message="Deploying Jspace  Loggers plugin to Joomla! environment."/>
+		<copy todir="${dest.plugins.jspace}/loggers">
+			<fileset dir="${src}" defaultexcludes="true">
+				<include name="**"/>
+				<exclude name="**/language/**"/>
+				<exclude name="**/build*.xml"/>
+			</fileset>
+		</copy>
+		<copy todir="${dest.administrator.languages}">
+			<fileset dir="${src}/language" defaultexcludes="true">
+				<include name="**/**"/>
+			</fileset>
+		</copy>
+	</target>
+<!--	
+	<target name="package" description="Creates a JSolr Index JSpace plugin package.">
+		<echo message="Packaging JSolr Index JSpace plugin."/>
+		<zip destfile="${package.dest}/plg_jsolrcrawler_jspace.zip"
+		       basedir="${src}"
+		       update="true"
+		       excludes="build*.xml"/>
+	</target>
+	-->
+</project>
